# meetup_talk_ai_todo

./: .gitignore  Cargo.toml  README.md  slides.md
bb_ollama/: Cargo.toml
bb_ollama/src/: api.rs  lib.rs
bb_ollama/src/models/: chat_request.rs  message.rs  mod.rs  options.rs  tool.rs  tool_call.rs
db/: Cargo.toml
db/src/: lib.rs
src/: ai.rs  commands.rs  config.rs  lib.rs  logger.rs  main.rs  state.rs  tool_property.rs  tools.rs
